--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/LuizFernandesOliveira/omnistack11.0.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "LuizFernadesOliveira",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/LuizFernandesOliveira/omnistack11.0/issues"
