--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
   },
   "homepage": "https://github.com/LuizFernandesOliveira/omnistack11.0#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "knex": "^0.20.13"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
